--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <a href="products.html" class="cta-button">Ver Produtos</a>
       </div>
       <div class="hero-image">
-        <img src="img/tenis-jogging-esportivo-adidas-swift-run-feminino--dcbbbc5f5c7d64697a5e8c9b0f97e722.jpg" alt="Tênis Esportivo" >
+        <img src="img/tenis-head.jpg" alt="Tênis Esportivo" >
       </div>
     </section>
 
@@ -37,13 +37,13 @@
       <h2>Produtos em Destaque</h2>
       <div class="product-grid">
         <div class="product-card">
-          <img src="img/images.png" alt="Tênis Adidas">
-          <h3>Tênis Adidas</h3>
+          <img src="img/tenis-direita.png" alt="Tênis Adidas">
+          <h3>Tênis Nike Branco Fly</h3>
           <p>R$ 299,99</p>
         </div>
         <div class="product-card">
-          <img src="img/images-_1_.png" alt="Tênis Nike">
-          <h3>Tênis Nike</h3>
+          <img src="img/tenis-esquerda.png" alt="Tênis Nike">
+          <h3>Tênis Nike Atrt Vegan Style</h3>
           <p>R$ 399,99</p>
         </div>
       </div>
