--- a/products.html
+++ b/products.html
@@ -36,19 +36,19 @@
         </thead>
         <tbody>
           <tr>
-            <td><img src="https://via.placeholder.com/150x100" alt="Tênis Adidas Ultraboost"></td>
+            <td><img src="./img/ultra-tenis.png" alt="Tênis Adidas Ultraboost"></td>
             <td>Tênis Adidas Ultraboost</td>
             <td>Adidas</td>
             <td>R$ 799,99</td>
           </tr>
           <tr>
-            <td><img src="https://via.placeholder.com/150x100" alt="Tênis Nike Air Force 1"></td>
+            <td><img src="./img/nikeaaa.png" alt="Tênis Nike Air Force 1"></td>
             <td>Tênis Nike Air Force 1</td>
             <td>Nike</td>
             <td>R$ 499,99</td>
           </tr>
           <tr>
-            <td><img src="https://via.placeholder.com/150x100" alt="Tênis Puma RS-X"></td>
+            <td><img src="./img/puma.png" alt="Tênis Puma RS-X"></td>
             <td>Tênis Puma RS-X</td>
             <td>Puma</td>
             <td>R$ 399,99</td>
